--- a/DefectReporter/Client/Pages/Defect/Index.razor
+++ b/DefectReporter/Client/Pages/Defect/Index.razor
@@ -49,7 +49,7 @@ else if (defects == null)
 }
 else
 {
-    <h3>Currently there is no defects in database.</h3>
+    <h3 class="text-center">Currently there is no defects in database.</h3>
 }
 
 @code {
