--- a/DefectReporter/Server/Pages/Shared/_Layout.cshtml
+++ b/DefectReporter/Server/Pages/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
     </div>
     <footer class="footer border-top pl-3 text-muted">
         <div class="container">
-        &copy; 2023 - DefectReporter.Server
+        &copy; 2023 - Defect Reporter App
             @{
                 var foundPrivacy = Url.Page("/Privacy", new { area = "" });
             }
