--- a/DefectReporter/Client/Pages/Defect/Edit.razor
+++ b/DefectReporter/Client/Pages/Defect/Edit.razor
@@ -82,7 +82,7 @@ else
             <InputSelect id="release" class="form-control" @bind-Value="defect.TestId">
                 @foreach (var test in tests)
                 {
-                    <option value="@test.Id">@test.TestName</option>
+                    <option value="@test.Id">@test.TestName - @test.TypeOfTest</option>
                 }
             </InputSelect>
             <ValidationMessage For="@(() => defect.TestId)" />
