--- a/DefectReporter/Server/Areas/Identity/Pages/Account/Login.cshtml
+++ b/DefectReporter/Server/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row justify-content-center">
     <div class="col-md-6">
-        <div class="text-center">
+        <div>
             <section>
                 <form id="account" method="post">
                     <h2>Log in</h2>
@@ -24,24 +24,14 @@
                         <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <div class="form-check">
+                        <div class="form-check form-check-inline">
                             <input class="form-check-input" asp-for="Input.RememberMe" />
                             <label class="form-check-label" asp-for="Input.RememberMe">@Html.DisplayNameFor(m => m.Input.RememberMe)</label>
                         </div>
                     </div>
                     <div class="mb-3">
-                        <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-                    </div>
-                    <div class="mb-3">
-                        <p>
-                            <button class="w-100 btn btn-lg btn-danger" id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</button>
-                        </p>
-                        <p>
-                            <button class="w-100 btn btn-lg btn-danger" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</button>
-                        </p>
-                        <p>
-                            <button class="w-100 btn btn-lg btn-danger" id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</button>
-                        </p>
+                        <br />
+                        <button id="login-submit" type="submit" class="w-100 btn btn-sm btn-primary">Log in</button>
                     </div>
                 </form>
             </section>
